--- a/custom_components/daikin_custom/manifest.json
+++ b/custom_components/daikin_custom/manifest.json
@@ -1,6 +1,6 @@
 {
   "domain": "daikin",
-  "name": "Daikin AC",
+  "name": "Daikin AC Custom",
   "config_flow": true,
   "documentation": "https://www.home-assistant.io/integrations/daikin",
   "requirements": ["pydaikin==2.4.4"],
